--- a/.gitignore
+++ b/.gitignore
@@ -3,20 +3,27 @@
 # BASIC VISUALIZATIONS
 
 # Histogram
-library(RColorBrewer)
 data(VADeaths)
 par(mfrow=c(2,3))
 hist(VADeaths,breaks=10, col=brewer.pal(3,"Set3"),main="Set3 3 colors")
+hist(VADeaths,breaks=3 ,col=brewer.pal(3,"Set2"),main="Set2 3 colors")
+hist(VADeaths,breaks=7, col=brewer.pal(3,"Set1"),main="Set1 3 colors")
+hist(VADeaths,,breaks= 2, col=brewer.pal(8,"Set3"),main="Set3 8 colors")
+hist(VADeaths,col=brewer.pal(8,"Greys"),main="Greys 8 colors")
+hist(VADeaths,col=brewer.pal(8,"Greens"),main="Greens 8 colors")
 
 # Bar/ Line Chart
 plot(AirPassengers,type="l") #Simple Line Plot
 barplot(iris$Petal.Length) #Creating simple Bar Graph
-barplot(table(iris$Species,iris$Sepal.Length),col = brewer.pal(3,"Set1")) 
+barplot(iris$Sepal.Length,col  = brewer.pal(3,"Set1"))
+barplot(table(iris$Species,iris$Sepal.Length),col  = brewer.pal(3,"Set1")) #Stacked Plot
 
 # Box Plot ( including group-by option )
 data(iris)
 par(mfrow=c(2,2))
 boxplot(iris$Sepal.Length,col="red")
+boxplot(iris$Sepal.Length~iris$Species,col="red")
+oxplot(iris$Sepal.Length~iris$Species,col=heat.colors(3))
 boxplot(iris$Sepal.Length~iris$Species,col=topo.colors(3))
 
 # Scatter Plot (including 3D and other features)
